# hydra-chess

./: .dir-locals.el  .gitignore  2023-experience-report.md  README.md  cabal.project  cabal.project.freeze  layer1.dot  test.preview.addr  transactions.dot  tx.raw  tx.raw.F1NSPm.signed
black-jack-client/: black-jack-client.cabal
black-jack-client/app/: Main.hs
black-jack-client/golden/: Indexed BlackJack MockChain.json
black-jack-client/mock-server/: HttpServer.hs  Main.hs
black-jack-client/src/BlackJack/: Client.hs  Server.hs
black-jack-client/src/BlackJack/Client/: Console.hs  IO.hs
black-jack-client/src/BlackJack/Server/: Hydra.hs  Mock.hs
black-jack-client/src/Game/: .#BlackJack.hs  BlackJack.hs  Chess.hs  Client.hs  Server.hs
black-jack-client/src/Game/Client/: Console.hs  IO.hs
black-jack-client/src/Game/Server/: Hydra.hs  Mock.hs
black-jack-client/test/BlackJack/: ClientSpec.hs
black-jack-client/test/BlackJack/Client/: ConsoleSpec.hs  IOSpec.hs
black-jack-client/test/Game/: ClientSpec.hs
black-jack-client/test/Game/Client/: ConsoleSpec.hs
black-jack-core/: black-jack-core.cabal
black-jack-core/app/: Main.hs
black-jack-core/golden/: BlackJack.json  Card.json  Color.json  DealerHand.json  Game.json
black-jack-core/src/: BlackJack.hs
black-jack-core/src/BlackJack/: Contract.hs  Game.hs  Pretty.hs
black-jack-core/src/BlackJack/Contract/: Game.hs
black-jack-core/src/Chess/: Contract.hs  ELO.hs  Game.hs  GameState.hs  Parse.hs  Plutus.hs  Render.hs  Token.hs
black-jack-core/test/BlackJack/: GameSpec.hs
black-jack-core/test/BlackJack/Contract/: GameSpec.hs
black-jack-core/test/Chess/: GameSpec.hs  Generators.hs  GoldenSpec.hs  ParseSpec.hs
chess-client/: chess-client.cabal
chess-client/golden/: Indexed Game MockChain.json
chess-client/src/Game/: Chess.hs  Client.hs  Server.hs
chess-client/src/Game/Client/: Console.hs
chess-client/src/Game/Server/: Mock.hs
chess-client/test/Game/: ClientSpec.hs
chess-client/test/Game/Client/: ConsoleSpec.hs
chess-core/: chess-core.cabal
chess-core/app/: chess-cli.hs
chess-core/golden/: BlackJack.json  Color.json  DealerHand.json  PlutusData.json
chess-core/src/: Chess.hs
chess-core/src/Chess/: Contract.hs  Data.hs  Game.hs  GameState.hs  Generators.hs  Parse.hs  Plutus.hs  Render.hs  Token.hs
chess-core/test/Chess/: DataSpec.hs  GameSpec.hs  ParseSpec.hs
chess-hydra/: chess-hydra.cabal
chess-hydra/app/: games-hydra.hs
chess-hydra/src/Games/: Options.hs
chess-hydra/src/Games/Server/: IO.hs
games-hydra/: games-hydra.cabal
games-hydra/src/Games/: Options.hs  Run.hs
games-hydra/src/Games/Run/: Cardano.hs  Hydra.hs
games-hydra/src/Games/Server/: Hydra.hs  IO.hs
games-hydra/test/Games/: RunSpec.hs
games-hydra/test/Games/Server/: HydraSpec.hs
