cabal-version:      2.4
name:               black-jack-client
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Arnaud Bailly
maintainer:         arnaud.bailly@iohk.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:  src
  ghc-options:     -Wall -Werror
  exposed-modules:
    BlackJack.Client
    BlackJack.Client.Console
    BlackJack.Client.IO
    BlackJack.Server
    BlackJack.Server.Mock
    BlackJack.Server.Hydra

  build-depends:
                  QuickCheck
                , aeson
                , base
                , base16-bytestring
                , black-jack-core
                , bytestring
                , containers
                , http-client
                , http-conduit
                , io-classes
                , megaparsec
                , mtl
                , mtl
                , random
                , text
                , websockets

executable black-jack-client
  ghc-options:      -Wall -Werror
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson
    , base                  ^>=4.14.3.0
    , black-jack-client
    , black-jack-core
    , optparse-applicative
    , text

  hs-source-dirs:   app
  default-language: Haskell2010

executable mock-server
  ghc-options:      -Wall -Werror
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:    HttpServer

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
                  aeson
                , base                  ^>=4.14.3.0
                , black-jack-client
                , black-jack-core
                , bytestring
                , containers
                , http-types
                , mtl
                , optparse-applicative
                , random
                , stm
                , text
                , time
                , wai
                , warp

  hs-source-dirs:   mock-server
  default-language: Haskell2010

test-suite tests
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  hs-source-dirs:     test
  other-modules:
    BlackJack.Client.ConsoleSpec
    BlackJack.ClientSpec

  main-is:            Spec.hs
  type:               exitcode-stdio-1.0
  build-depends:
    , base
    , black-jack-client
    , containers
    , hspec
    , hspec-core
    , http-types
    , io-classes
    , io-sim
    , mtl
    , QuickCheck
    , text

  build-tool-depends: hspec-discover:hspec-discover -any
