cabal-version:      2.4
name:               black-jack-core
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Arnaud Bailly
maintainer:         arnaud.bailly@iohk.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:  src
  ghc-options:
    -Wall -Werror -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-strictness

  exposed-modules:
    BlackJack
    BlackJack.Contract
    BlackJack.Contract.Game
    BlackJack.Game
    BlackJack.Pretty

  build-depends:
    , aeson
    , base
    , base16-bytestring
    , cardano-api
    , containers
    , mtl
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , QuickCheck
    , random
    , template-haskell
    , text
    , vector

executable black-jack
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base
    , black-jack-core

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite tests
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  hs-source-dirs:     test
  other-modules:      BlackJack.GameSpec
  main-is:            Spec.hs
  type:               exitcode-stdio-1.0
  build-depends:
    , base
    , black-jack-core
    , containers
    , hspec
    , hspec-core
    , mtl
    , QuickCheck
    , random

  build-tool-depends: hspec-discover:hspec-discover -any
