cabal-version:      2.4
name:               black-jack-core
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Arnaud Bailly
maintainer:         arnaud.bailly@iohk.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:  src
  ghc-options:
    -Wall -Werror -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-strictness

  exposed-modules:
    BlackJack
    BlackJack.Contract
    BlackJack.Contract.Game
    BlackJack.Game
    BlackJack.Pretty

    Chess
    Chess.Contract
    Chess.ELO
    Chess.Game
    Chess.Parse
    Chess.Plutus
    Chess.Render
    Chess.Token

  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , cardano-api
    , cardano-crypto-class
    , containers
    , exceptions
    , generic-random
    , mtl
    , megaparsec
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , prettyprinter-ansi-terminal
    , QuickCheck
    , random
    , template-haskell
    , text
    , vector

executable black-jack
  main-is:          black-jack.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base
    , black-jack-core

  hs-source-dirs:   app
  default-language: Haskell2010

executable chess
  main-is:          chess-cli.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base
    , black-jack-core

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite tests
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  hs-source-dirs:     test
  other-modules:
     BlackJack.GameSpec
     BlackJack.Contract.GameSpec

     Chess.GameSpec
     Chess.Generators
     Chess.GoldenSpec
     Chess.ParseSpec
  main-is:            Spec.hs
  type:               exitcode-stdio-1.0
  build-depends:
    , aeson
    , base
    , black-jack-core
    , containers
    , hspec
    , hspec-core
    , hspec-golden-aeson
    , mtl
    , QuickCheck
    , random
    , text

  build-tool-depends: hspec-discover:hspec-discover -any
