cabal-version:      2.4
name:               chess-client
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Arnaud Bailly
maintainer:         arnaud.bailly@iohk.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:  src
  ghc-options:     -Wall -Werror
  exposed-modules:
    Game.Client
    Game.Client.Console
    Game.Client.IO
    Game.Server
    Game.Server.Mock

    Game.Chess
  build-depends:
                  QuickCheck
                , aeson
                , base
                , base16-bytestring
                , chess-core
                , bytestring
                , containers
                , generic-random
                , http-client
                , http-conduit
                , io-classes
                , megaparsec
                , mtl
                , mtl
                , random
                , text
                , websockets

test-suite tests
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall
  hs-source-dirs:     test
  other-modules:
    Game.Client.ConsoleSpec
    Game.ClientSpec

  main-is:            Spec.hs
  type:               exitcode-stdio-1.0
  build-depends:
    , aeson
    , base
    , chess-client
    , chess-core
    , bytestring
    , containers
    , hspec
    , hspec-core
    , hspec-golden-aeson
    , http-types
    , io-classes
    , io-sim
    , mtl
    , QuickCheck
    , text

  build-tool-depends: hspec-discover:hspec-discover -any
