cabal-version:      2.4
name:               games-hydra
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Arnaud Bailly
maintainer:         arnaud.bailly@iohk.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:  src
  ghc-options:     -Wall -Werror
  exposed-modules:
    Games.Run
    Games.Run.Cardano
    Games.Run.Hydra

    Games.Server.Hydra
  build-depends:
                  QuickCheck
                , aeson
                , base
                , base16-bytestring
                , black-jack-core
                , black-jack-client
                , bytestring
                , cardano-binary
                , cborg
                , containers
                , directory
                , filepath
                , generic-random
                , http-client
                , http-conduit
                , cardano-crypto-class
                , io-classes
                , megaparsec
                , mtl
                , mtl
                , process
                , random
                , tar
                , text
                , unix
                , websockets
                , zlib

executable hygames
  ghc-options:      -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  main-is:          games-hydra.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson
    , base
    , black-jack-client
    , black-jack-core
    , games-hydra
    , optparse-applicative
    , text

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite tests
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  hs-source-dirs:     test
  other-modules:
    Games.RunSpec

  main-is:            Spec.hs
  type:               exitcode-stdio-1.0
  build-depends:
    , aeson
    , base
    , games-hydra
    , bytestring
    , containers
    , hspec
    , hspec-core
    , hspec-golden-aeson
    , http-types
    , io-classes
    , io-sim
    , mtl
    , QuickCheck
    , text

  build-tool-depends: hspec-discover:hspec-discover -any
